--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "yup": "^1.4.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
