--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "i": "^0.3.7",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
@@ -22,6 +24,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
